Configuration dialog: check if the url isEmpty().

BUG: 164305


svn path=/trunk/KDE/kdebase/apps/; revision=821481